[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
fastpair = { version = "0.1", path = "C:\\Users\\admin\\Documents\\nearby\\fastpair\\rust" }
futures = { version = "0.3", features = ["executor"] }
anyhow = "1.0"
